# similarity-arango

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
data/: process.py  query.py
